Fix formatting on smaller devices

--- a/html.css
+++ b/html.css
@@ -9,11 +9,12 @@
   justify-content: center;
   flex-wrap: wrap;
   padding: 0rem 1rem;
+  line-height: 1.5rem;
 }
 
 #subject {
   align-items: center;
-  padding: 0rem 1rem;
+  padding: 0rem 0.5rem;
 }
 
 li {
@@ -31,9 +32,18 @@ html {
   flex-direction: column;
   justify-content: center;
   background-color: #fff;
-  padding: 2rem 2rem;
+  padding: 2rem 0.5rem;
   max-width: 9in;
   justify-content: center;
   margin: 1rem auto;
   box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+}
+
+@media only screen and (min-width: 700px) {
+  #html-body {
+    padding: 2rem 1rem;
+  }
+  #subject {
+    padding: 0rem 1rem;
+  }
 }
